--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -11,7 +11,7 @@
 .form {
     background-color: white;
     border-radius: 10px;
-    padding: 2rem;
+    padding: rem;
     min-width: 80%;
     margin: 2rem;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
